--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <img id="logo" src="the rose.jpg" alt="Logo" height="30px">
     </div>
     <img id="banner" src="banner.jpg" alt="Banner" height="260" width="360">
-    <h1>About Jovian</h1>
+    <h1>Welcome to Jovian</h1>
     <div id="about">
         <div id="description">
             <p style="margin-top: 0px;">At Jovian, we're on a mission to build the world's most highly reputed technical
