--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta property="og:description" content="Learn more about job openings">
+    <meta property="og:image" content="/jovian.png">
     <title>My Second Web Page</title>
     <link rel="icon" href="/download.jpeg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
